Changelog
=========


1.0.0 (unreleased)
------------------

- Initial implementation
  [jone]