@@ -5,5 +5,8 @@ Changelog
 1.0.0 (unreleased)
 ------------------
 
+- Added dexterity support.
+  [phgross]
+
 - Initial implementation
   [jone]
